--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ to{
 		height: 50px;
 		margin: 0px 10px;
     transition: 2s ease;
-      background-color: beige ;
+      background-color: white ;
     }
 .lo:hover{
   background-image: url(Pinterest.jpg);
