--- a/index.loayden/index.about.html
+++ b/index.loayden/index.about.html
@@ -9,7 +9,7 @@
 <body>
     <div class="table">
         <div class="table">
-            <a href="fr3.html" class="b">home</a>
+            <a href="index.home.html" class="b">home</a>
     <div class="text">
         <h1>loay eldin mohamed</h1>
         <h1>16 years</h1>
@@ -30,7 +30,7 @@
             Egypt Open Robot Championship this championship is supported by ORCE,INFINIX,ARAB ROBOTICS ASSOCIATION
         </p>
         <h2>robot for protection owner</h2>
-        <p>to read about this project go <a href="project.html">to projects</a></p>
+        <p>to read about this project go <a href="index.projects.html">to projects</a></p>
         <div class="o"></div>
 </body>
 </html>
