--- a/index.loayden/index.projects.html
+++ b/index.loayden/index.projects.html
@@ -10,10 +10,10 @@
 <body>
     
         <div class="table">
-            <a href="fr3.html" class="b">home</a>
+            <a href="index.home.html" class="b">home</a>
     <header>
     <ul>
-     <a href="robot.html" class="l">robot for protection
+     <a href="index.robot.html" class="l">robot for protection
     </ul>
     </header>
         </div>
