--- a/index.loayden/index.robot.html
+++ b/index.loayden/index.robot.html
@@ -10,8 +10,8 @@
 <body>
     
         <div class="table">
-            <a href="fr3.html" class="b">home</a>
-            <a href="project.html" class="b">project</a>
+            <a href="index.home.html" class="b">home</a>
+            <a href="index.projects.html" class="b">project</a>
     <div class="text">
         <h2>robot for protection</h2>
         <p>هنبدأ سؤال انت لما تبقى تعبان مامتك بتعمل معاك ايه؟
