--- a/index.loayden/index.home.html
+++ b/index.loayden/index.home.html
@@ -12,15 +12,15 @@
     <div class="table">
 <header>
     <a href="#" class="logo">PROFOLIO</a>
-    <a href="fr3.html" class="b">home</a>
-    <a href="about.html" class="c">about</a>
-    <a href="project.html" class="d">projects</a>
+    <a href="index.home.html" class="b">home</a>
+    <a href="index.about.html" class="c">about</a>
+    <a href="index.projects.html" class="d">projects</a>
 </header>
     
 <div class="text">
 <h2>LOaYDeN</h2>
 <p>He holds many awards in the field of inventions and has won many grants in all European
-     countries.he has many skills to know more <a class="ff" href="about.html">click about.</a></p>
+     countries.he has many skills to know more <a class="ff" href="index.about.html">click about.</a></p>
      <a href="https://instagram.com/luai_eldeen?igshid=MjEwN2IyYWYwYw==" class="e">CHAT</a>
 </div>
 </div>
