--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa:wght@700&family=Cairo&display=swap" rel="stylesheet">
 </head>
 <body style="background-image:linear-gradient(beige,brown       );">
-  <div style="background-color: beige; border: 0.5px solid brown; height: 100%vh; width: 85%;box-shadow:2px 2px 2px black;">
+  <div style="background-color: white; border: 0.5px solid brown; height: 100%vh; width: 85%;box-shadow:2px 2px 2px black;">
     
       <div style="animation-name: x; animation-duration: 2s; 
       background-color: brown; width: 1px; height: 100px;
